--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "ejs": "^3.1.10",
+    "expres": "^0.0.5",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "node": "^24.2.0",
