--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "ejs": "^3.1.10",
+    "engine": "^1.0.0",
     "expres": "^0.0.5",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "node": "^24.2.0",
     "nodemon": "^3.1.10",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "view": "^1.1.1"
   }
 }
